# plantiq

./: .dockerignore  .editorconfig  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  fly.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  daily-run.yml
docs/: architecture.md  daily-run-migration.md  project-reference.md
scheduler/: .dockerignore  Dockerfile  pyproject.toml
scheduler/src/plantiq/: __init__.py  backup.py  cli.py  engine.py  notify.py  run.py  weather.py
scheduler/src/plantiq/core/: __init__.py  config.py  database.py  logging.py
scheduler/tests/: conftest.py  engine_dry.py  test_database.py  test_engine_rules.py  test_notify.py  test_simulation.py  test_weather.py
