# scheduler/pyproject.toml

[project]
name = "plantiq"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.27.2",
    "psycopg[binary]==3.3.4",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.36",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "ruff==0.7.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["plantiq"]
